<resources>
    <string name="app_name">Shoes Store</string>
    <string name="login_screen">Login</string>
    <string name="email">Email</string>
    <string name="email_validation">Please enter a valid Email</string>
    <string name="password">Password</string>
    <string name="password_validation">Please enter a valid Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to our Store</string>
    <string name="about_us">Learn More About Us</string>
    <string name="instructions_header">Some Instruction we hope you follow:</string>
    <string name="instructions">"-You can add your Shoes to sell.
-Shoes with full Description will be useful for the customer.
-Make sure that your data is appropriate to prevent any ban.
-Please Enjoy the App and we welcome any feedback any time.
"</string>
    <string name="go_to_store">Go to Shoes Store</string>
    <string name="name_header">Name: </string>
    <string name="company_header">Company: </string>
    <string name="shoe_size_header">Shoe Size: </string>
    <string name="description_header">Description: </string>
    <string name="name">Name</string>
    <string name="name_validation">Please enter Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_size_validation">Shoe Size must be a number</string>
    <string name="company">Company</string>
    <string name="company_validation">Please enter Company Name</string>
    <string name="description">Description</string>
    <string name="description_validation">Please enter Description</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>
