<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_start"
    tools:context=".screens.WelcomeFragment">

    <TextView
        android:id="@+id/txtWelcomeHeader"
        style="@style/style_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/txtStoreName"
        style="@style/style_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btnLearnMore"
        style="@style/style_regular_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/about_us" />
</LinearLayout>
</layout>