<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--    Here its just so simple Design using Linear Layout for Instruction Screen-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/padding_start"
        tools:context=".screens.WelcomeFragment">

        <TextView
            android:id="@+id/txtInstructionsHeader"
            style="@style/style_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/instructions_header"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtInstructions"
            style="@style/style_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/instructions"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGoToStore"
            style="@style/style_regular_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/go_to_store" />
    </LinearLayout>
</layout>