<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.mf.myshoeapp.viewModels.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.LoginFragment2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_padding_start_end"
            android:paddingEnd="@dimen/layout_padding_start_end">

            <TextView
                android:id="@+id/txtMain"
                style="@style/style_main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_start"
                android:layout_marginBottom="@dimen/margin_top"
                android:text="@string/login_screen" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/style_input_field"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/style_input_field"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/style_input_field"
                android:autofillHints="emailAddress"
                android:hint="@string/password"
                android:inputType="textPassword|textEmailAddress" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/style_input_field"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:dividerPadding="@dimen/spacing"
            android:paddingStart="@dimen/spacing"
            android:paddingEnd="@dimen/spacing"
            android:showDividers="none">

            <Button
                android:id="@+id/btnLogin"
                style="@style/style_regular_button"
                android:layout_weight="1"
                android:onClick="@{()->loginViewModel.onLogin()}"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/style_regular_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{()->loginViewModel.onLogin()}"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</layout>